--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phaser-dev-tools",
+  "name": "lulu",
   "version": "0.0.0",
   "dependencies": {},
   "scripts": {
@@ -13,6 +13,6 @@
     "lodash": "^4.17.4",
     "nodemon": "^1.11.0",
     "tojson-loader": "^1.0.4",
-    "webpack": "3.8.1"
+    "webpack": "3.0.0"
   }
 }
