--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "node_modules/.bin/webpack",
     "build": "PROD_ENV=1 node_modules/.bin/webpack"
   },
-  "main": "build/phaser-dev-tools.js",
+  "main": "build/lulu.js",
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "git-rev-sync": "^1.9.1",
